--- a/styles.css
+++ b/styles.css
@@ -473,6 +473,10 @@ body {
   margin-bottom: 4rem;
 }
 
+.code-comparison-description {
+  margin-bottom: 3rem;
+}
+
 .section-description {
   color: var(--off-white);
   font-size: 1.2rem;
